--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   another_flutter_splash_screen: ^1.2.0
   provider: ^6.1.2
   http: ^1.2.0
+  flutter_image_slideshow: ^0.1.6
+  cached_network_image: ^3.3.1
+  shared_preferences: ^2.2.3
+
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +72,7 @@ flutter:
     - assets/images/2x/
     - assets/images/3x/
     - assets/images/test/
+    - assets/images/gens/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
